# aifs

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
aifs/: __init__.py  __main__.py  embedder.py  indexables.py  search.py  settings.py  test.py
aifs/testfuncs/: _.aifs  bookTicket.py  browseWeb.py  cookDish.py  doLaundry.py  drinkAlcohol.py  executiveAssistant.py  liftWeights.py  lowerBrightness.py  playTennis.py  sendEmail.py  setAlarm.py
tests/: test_aifs.py
