[tool.poetry]
name = "aifs"
version = "0.0.7"
description = "Local semantic search. Stupidly simple."
authors = ["Killian Lucas <killian@openinterpreter.com>", "Harsh Verma <synacktra.work@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
unstructured = {extras = ["all-docs"], version = "0.12.3"}
cyclopts = "2.1.2"
rich = "13.7.0"
qdrant-client = "1.7.2"
fastembed = "0.1.3"
minifzf = "0.1.4"

[tool.poetry.scripts]
aifs = "aifs.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
