[tool.poetry]
name = "aifs"
version = "0.0.14"
description = "Local semantic search. Stupidly simple."
authors = ["Killian Lucas <killian@openinterpreter.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
#chromadb = "^0.4.22"
#numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"